--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=spring-boot-jpa
+spring.datasource.url=jdbc:h2:mem:employee_db
+spring.datasource.username=mubashar
+spring.datasource.password=mub
