--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.application.name=spring-boot-jpa
 spring.datasource.url=jdbc:h2:mem:employee_db
 spring.datasource.username=mubashar
 spring.datasource.password=mub
+
+spring.jpa.show-sql=true
